Change address to city.
