# SneakerApi/database/schema/citySchema.js
@@ -1,11 +1,8 @@
 const mongoose = require("mongoose");
 const Double = require('@mongoosejs/double');
 require('mongoose-long')(mongoose);
-const Long = mongoose.Schema.Types.Long;
-
 module.exports = new mongoose.Schema({
-    _streetName: {type: String, require: true},
-    _homeNumber: {type: Number, require: true},
-    _postCode: {type: Long, require: true},
+    _latitude: {type: Double, require: true},
+    _longitude: {type: Double, require: true},
     _cityName: {type: String, require: true},
 });
