# SneakerApi/database/schema/offerSchema.js
@@ -1,6 +1,6 @@
 const mongoose = require("mongoose");
 const Double = require('@mongoosejs/double');
-const Address = require('./addressSchema')
+const City = require('./citySchema')
 module.exports = new mongoose.Schema({
     _name: {type: String, required: true},
     _description: {type: String, required: true},
@@ -10,5 +10,5 @@ module.exports = new mongoose.Schema({
     _created: {type: Date, default: Date.now, required: true},
     _condition: {type: String, required: true},
     _ownerName: {type: String, required: true},
-    _pickUpAddress: {type: Address,required: true},
+    _city: {type: City,required: true},
 });
