# SneakerApi/database/schema/userSchema.js
@@ -1,5 +1,5 @@
 const mongoose = require("mongoose");
-const address = require("../schema/addressSchema");
+const City = require("./citySchema");
 module.exports = new mongoose.Schema({
     _username: {type: String, unique: true, required: true},
     _password: {type: String, required: true},
@@ -9,6 +9,6 @@ module.exports = new mongoose.Schema({
     _favorites: {type: []},
     _registered: {type: Date, default: Date.now, required: true},
     _chats: {type: []},
-    _address: {type: address},
+    _city: {type: City},
     _ratings: {type:[]}
 });
